Bug 1673192 - Don't attempt to launch the RDD process when it's not needed. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D96147